修复后端编译与数据库连接问题，避免嵌套仓库再次出现。
将 List.of() 改为 Java 8 兼容写法，修正本地 MySQL 密码，并在 .gitignore 中忽略嵌套目录。

Co-authored-by: Cursor <cursoragent@cursor.com>