@@ -1,6 +1,7 @@
 package com.catering.util;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -48,7 +49,7 @@ public class DfaFilter {
      * 找出文本中所有命中的敏感词（去重，按出现顺序）
      */
     public List<String> findAll(String text) {
-        if (text == null || text.isEmpty()) return List.of();
+        if (text == null || text.isEmpty()) return Collections.emptyList();
         Set<String> hits = new LinkedHashSet<>();
         for (int i = 0; i < text.length(); i++) {
             Map<Character, Object> node = root;
